--- a/public/index.html
+++ b/public/index.html
@@ -104,61 +104,65 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="simplified" startnode="1" creator="Twine" creator-version="2.11.1" format="SugarCube" format-version="2.37.3" ifid="7BD3DD94-39F7-4A24-A141-61EA9ACCF0D6" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript">// Story JavaScript
+	<tw-storydata name="simplified" startnode="1" creator="Twine" creator-version="2.11.1" format="SugarCube" format-version="2.37.3" ifid="7BD3DD94-39F7-4A24-A141-61EA9ACCF0D6" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript">// Story JavaScript (for SugarCube 2)
 
-// Put your server URL here. For local testing, use "http://localhost:2433".
-// If you deploy to a service like Render, use its public URL.
-window.socket = io("http://localhost:3356"); 
-
+// Connect to the server on the new port.
+// For local testing, use "http://localhost:3356".
+// Make sure to use your actual Render URL!
+// Connect to the Socket.IO server hosted on Render
+window.socket = io("https://twondtwinegametest-1.onrender.com"); 
 // --- Handle incoming data from the server ---
 socket.on('loadState', (serverState) => {
     console.log('Received state from server:', serverState);
-    // Update the Twine variable with the value from the server.
-    State.variables.Protagonist = serverState.Protagonist;
+
+    // Use SugarCube's API to access story variables.
+    SugarCube.State.variables.Protagonist = serverState.Protagonist;
     
-    // Refresh the current passage to show the new value.
-    // This is important if another player changed the value while you were on the page.
-    Engine.show(); 
+    // Use SugarCube's engine command to refresh the current passage.
+    // passage() returns the name of the current passage.
+    if (Engine.has(passage())) {
+        Engine.play(passage()); 
+    }
 });
 
 
 // --- Function to send data to the server ---
-// We will call this function from our Twine passage.
+// This function will be called from our Twine passages.
 window.updateProtagonistOnServer = function(newValue) {
     if (window.socket) {
         console.log(`Client sending update: "${newValue}"`);
-        // Send the new value to the server under the event name 'updateProtagonist'.
+        // Send the new value to the server.
         window.socket.emit('updateProtagonist', newValue);
     }
 };</script><tw-passagedata pid="1" name="Start" tags="" position="475,200" size="100,100">:: Start
 
-You are a &lt;&lt;print $Protagonist&gt;&gt;.
+You are a $Protagonist.
 
 The world is currently defined by this protagonist.
 
 [[Change the world-&gt;EditProtagonist]]</tw-passagedata><tw-passagedata pid="2" name="EditProtagonist" tags="" position="475,300" size="100,100">:: EditProtagonist
 
-The Protagonist is currently a &lt;strong style=&quot;color:green;&quot;&gt;&lt;&lt;print $Protagonist&gt;&gt;&lt;/strong&gt;.
+The Protagonist is currently a &lt;strong style=&quot;color:green;&quot;&gt;$Protagonist&lt;/strong&gt;.
 
 What should it be instead?
 
-&lt;&lt;linkreplace &quot;Change to...&quot;&gt;&gt;
+&lt;&lt;nobr&gt;&gt;
   &lt;&lt;link &quot;berry&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;berry&quot;)&gt;&gt;
-  &lt;&lt;/link&gt;&gt;&lt;br&gt;
+  &lt;&lt;/link&gt;&gt;
 
   &lt;&lt;link &quot;cat&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;cat&quot;)&gt;&gt;
-  &lt;&lt;/link&gt;&gt;&lt;br&gt;
+  &lt;&lt;/link&gt;&gt;
 
   &lt;&lt;link &quot;human&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;human&quot;)&gt;&gt;
-  &lt;&lt;/link&gt;&gt;&lt;br&gt;
+  &lt;&lt;/link&gt;&gt;
 
   &lt;&lt;link &quot;robot&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;robot&quot;)&gt;&gt;
   &lt;&lt;/link&gt;&gt;
-&lt;&lt;/linkreplace&gt;&gt;
+&lt;&lt;/nobr&gt;&gt;
 
 &lt;br&gt;&lt;br&gt;
 [[Go back|Start]]</tw-passagedata></tw-storydata>
