--- a/public/index.html
+++ b/public/index.html
@@ -125,13 +125,13 @@ window.socket.on('stateUpdated', (newGameState) => {
     Engine.play(passage(), true); 
 });</script><tw-passagedata pid="1" name="Start" tags="" position="475,200" size="100,100">:: Start
 
-You are a $Protagonist.
+You are a $protagonist.
 
 The world is currently defined by this protagonist.
 
 [[Change the world-&gt;EditProtagonist]]</tw-passagedata><tw-passagedata pid="2" name="EditProtagonist" tags="" position="475,300" size="100,100">:: EditProtagonist
 
-The Protagonist is currently a &lt;strong style=&quot;color:green;&quot;&gt;$Protagonist&lt;/strong&gt;.
+The Protagonist is currently a &lt;strong style=&quot;color:green;&quot;&gt;$protagonist&lt;/strong&gt;.
 
 What should it be instead?
 
