--- a/public/index.html
+++ b/public/index.html
@@ -168,18 +168,21 @@ This choice will only affect YOUR story path until you return to the Start scree
 
 &lt;&lt;link &quot;Human&quot;&gt;&gt;
     &lt;&lt;set $localProtagonist to &quot;human&quot;&gt;&gt;
+    &lt;&lt;set $protagonist to &quot;human&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;human&quot;)&gt;&gt;
     &lt;&lt;goto &quot;ContinueStory&quot;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
 &lt;&lt;link &quot;Cat&quot;&gt;&gt;
     &lt;&lt;set $localProtagonist to &quot;cat&quot;&gt;&gt;
+    &lt;&lt;set $protagonist to &quot;cat&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;cat&quot;)&gt;&gt;
     &lt;&lt;goto &quot;ContinueStory&quot;&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
 &lt;&lt;link &quot;Berry&quot;&gt;&gt;
     &lt;&lt;set $localProtagonist to &quot;berry&quot;&gt;&gt;
+    &lt;&lt;set $protagonist to &quot;berry&quot;&gt;&gt;
     &lt;&lt;run updateProtagonistOnServer(&quot;berry&quot;)&gt;&gt;
     &lt;&lt;goto &quot;ContinueStory&quot;&gt;&gt;
 &lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="ContinueStory" tags="" position="600,300" size="100,100">:: ContinueStory
